# claude-code-minoan

./: .gitignore  .gitmodules  .mailmap  .sync-config.json  ARCHITECTURE.md  CLAUDE.md  CLAUDE.template.md  CONTRIBUTING.md  LICENSE  README.md  setup.sh
agents/: fable.md  librarian.md
commands/: INDEX.md  README.md  checkpoint-list.md  checkpoint.md  claude-tracker-here.md  claude-tracker-resume.md  claude-tracker-search.md  claude-tracker.md  designer.md  ensoul.md  quote-search.md  quote.md  session-report.md  slack-sync.md  spawn.md  tag.md  telegram-respond.md
demos/: README.md
docs/: README.md  ecosystem.md  tmux-claude-workflow.md
extensions/: README.md
ghostty/: README.md  config  theme-switching.zsh
hooks/: HANDOFF-MODEL-EVAL.md  HANDOFF-README.md  INDEX.md  README.md  auto-screenshot.py  block-webfetch.sh  block-websearch.sh  context-bar.sh  crab-model.sh  custom-lint.sh  (+46 more)
scripts/screenshot-rename/: .env.example  .gitignore  README.md  batch-rename.py  com.minoan.screenshot-rename.plist  minoan-screenshot-rename  organize.py  pyproject.toml  status.sh  watcher.py
scripts/screenshot-rename/assets/: architecture.mmd  readme-preview-light.html  readme-preview.html
skills/integration-automation/slack/daemon/: .gitignore  bot.py  check-skills.sh  claude_handler.py  claudicle.py  config.py  monitor.css  monitor.py  pyproject.toml  requirements.txt  skills.md  slack_adapter.py  soul.md  soul_engine.py  soul_memory.py  user_models.py  working_memory.py
skills/integration-automation/slack/daemon/launchd/: com.minoan.slack-daemon.plist  install.sh
(+1339 files in other folders)
