[project]
name = "screenshot-rename"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
all = ["openai>=1.0", "anthropic>=0.25"]
